--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 <meta charset="utf-8" />
-<title>Название сайта</title>
+<title>Site.Laba8</title>
 </head>
 <body>
 <!--Создаём таблицу контейнер, которой задаём следующее
@@ -76,20 +76,11 @@ style="width:80%">
 <h2>Страница</h2>
 <!--Начинаем абзац с красной строки-->
 <p style="text-indent:20px">
-Здравствуйте уважаемые будущие веб-мастера!
-Мне 55 лет и я рад приветствовать Вас на своём сайте.
-Этот сайт первый, который я разработал самостоятельно,
-а до этого умел только входить в интернет.</p>
+Здравствуйте!
+Я Дмитрий,и я рад приветствовать Вас на своём сайте.
+</p>
 
-<p style="text-indent:20px">Почему я решил его сделать?
-За те 3 месяца, пока разбирался в
-сайтостроении и создавал этот ресурс обнаружилось,
-что авторы руководств по созданию
-сайтов считают многие нюансы само собой разумеющимися
-и не обращают на них внимание
-А мне, учитывая возраст и «опыт», было не просто
-понять как раз эти нюансы, они отнимали больше всего
-времени.</p>
+<p style="text-indent:20px">Я студент первого курса Херсонского Национального Технического Университета.На даный момент изучаю языки программирования С и С++.</p>
 <!--Закрываем ячейку-->
 </td>
 
