--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ style="width:100%; border-radius:5px;">
 <!--Создаём столбец таблицы-->
 <th>
 <!--Содержание ячейки столбца-->
-<h1>Название сайта (организации)</h1>
-<h3>Описание сайта</h3>
+<h1>Мой сайт.</h1>
+<h3>Лабораторная №8</h3>
 <!--Закрываем таблицу-->
 </th>
 </tr>
@@ -120,7 +120,7 @@ style="margin-left:5px;" - отступ названия от маркера-->
 bgcolor="#e6e6fa"
 align="center">
 <h3>Общая информация</h3>
-<p>Текст общей информации или реклама</p>
+<p>Сайт был разработан мной у 10 классе</p>
 <!--Закрываем ячейку с общей информацией
 и таблицу основного контента-->
 </td>
@@ -140,7 +140,7 @@ style="width:100%; border-radius:5px;">
 <tr>
 <!--Создаём столбец-->
 <th>
-<h3>Подвал</h3>
+<h3>Конец</h3>
 <!--Закрываем таблицу подвала. При желании в подвале можно
 сделать несколько строк и столбцов-->
 </th>
